# dreamers-directional-forecasting-in-cryptocurrencies

./: .gitattributes  .gitignore  README.md  best_model.pth  candle_sequence_dataset.py  compute_acf_pacf_for_window.py  compute_emd_features_for_window.py  compute_fft_for_window.py  compute_rqa_features_for_window.py  compute_stft_features_for_window.py  compute_wavelet_features_for_window.py  data_prep.ipynb  notebook.ipynb  pyproject.toml  requirements.txt  xgboost_model.joblib
archives/: launch_training.py  model.ipynb  normalization.ipynb  prepare_dataset.py
archives/pipeline/: executor.py  feature.py
archives/pipeline/steps/: average_directional_index.py  macd.py  moving_average.py  rate_of_change.py  relative_strength_index.py  stochastic_oscillator.py  volatility.py  volume_moving_average.py  williams.py
dataset/: X_df.parquet  y_df.parquet
src/: dataset.py  loss.py  metric.py  model.py  sagemaker_feature_store_helper.py  train.py
src/pipeline/: feature.py  manager.py  utils.py  worker.py
src/pipeline/steps/: average_directional_index.py  macd.py  moving_average.py  rate_of_change.py  relative_strength_index.py  stochastic_oscillator.py  volatility.py  volume_moving_average.py  williams.py
