[project]
name = "dreamers-directional-forecasting-in-cryptocurrencies"
version = "0.1.0"
description = "Add a short description here"
authors = [{ name = "Rémi Kalbe", email = "me@remi.boo" }]
requires-python = ">= 3.12, <3.13"
dependencies = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.project]
channels = ["conda-forge", "pytorch"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
dreamers-directional-forecasting-in-cryptocurrencies = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.12, <3.13"
polars = ">=1.9.0,<2"
pandas = ">=2.2.3,<3"                                     # Used only for DataWrangler vscode extension
plotly = ">=5.24.1,<6"
numpy = ">=2.1.2,<3"
matplotlib = ">=3.9.2,<4"
scipy = ">=1.14.1,<2"
pyarrow = ">=17.0.0,<18"
pytorch = { version = ">=2.5,<2.6", channel = "pytorch" }
tqdm = ">=4.66.5,<5"
psutil = ">=6.1.0,<7"
# Jupyter
jupyterlab = ">=4.2.5,<4.3"
jupyter = ">=1.1.1,<1.2"
ipywidgets = ">=8.1.5,<8.2"
ipykernel = ">=6.29.5,<6.30"
pixi-kernel = ">=0.5.1,<0.6"
# Dev
ruff = ">=0.6.9,<0.7"
