[project]
name = "dreamers-directional-forecasting-in-cryptocurrencies"
version = "0.1.0"
description = "Add a short description here"
authors = [{ name = "Rémi Kalbe", email = "me@remi.boo" }]
requires-python = ">= 3.11, <3.12"
dependencies = [
  "pyrqa>=8.1.0,<9",
  "emd-signal>=1.6.4,<2",
  "chronos[training] @ git+https://github.com/amazon-science/chronos-forecasting.git",
  "gluonts>=0.16.0rc1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
  "compute_acf_pacf_for_window",
  "compute_emd_features_for_window",
  "compute_fft_for_window",
  "compute_rqa_features_for_window",
  "compute_stft_features_for_window",
  "compute_wavelet_features_for_window",
]

[tool.pixi.project]
channels = ["conda-forge", "pytorch"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
dreamers-directional-forecasting-in-cryptocurrencies = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
pip = ">=24.3.1,<25"
xgboost = ">=2.1"
numpy = ">=2.1.2,<3"
scipy = ">=1.14.1,<2"
scikit-learn = ">=1.5.2,<2"
polars = ">=1.12.0,<2"
pandas = ">=2.2.3,<3"
matplotlib = ">=3.9.2,<4"
pyarrow = ">=18.0.0,<19"
tqdm = ">=4.66.6,<5"
pywavelets = ">=1.7.0,<2"
statsmodels = ">=0.14.4,<0.15"
pyts = ">=0.13.0,<0.14"
siphash24 = ">=1.7,<2"
lightgbm = ">=4.5.0,<5"
optuna = ">=4.0.0,<5"
pytorch = ">=2.4.1,<3"
transformers = ">=4.46.1,<5"
multiprocess = ">=0.70.17,<0.71"
# Jupyter
jupyterlab = ">=4.2.5,<4.3"
jupyter = ">=1.1.1,<1.2"
ipywidgets = ">=8.1.5,<8.2"
ipykernel = ">=6.29.5,<6.30"
pixi-kernel = ">=0.5.1,<0.6"
# Dev
ruff = ">=0.6.9,<0.7"
tensorboard = ">=2.18.0,<3"
